--- a/README
+++ b/README
@@ -38,8 +38,8 @@ The above three command options are the most important.
 
 The "-c" option gives the cover style which is one of full, center, north, west.
 
-The "-p" option gives the photo of the magazine, you can set it to a file name
-of a photo or section name on the Wikipedia Mainpage.
+The "-p" option gives the photo of the magazine, you can set it to the file name
+of a photo or one section name on the Wikipedia Mainpage.
 
 * feature 特色条目
 * featurepic 特色图片
